<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".Real_Page">

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:onClick="SAVENOTE"
        android:text="@string/SAVE"
        android:textColor="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:onClick="LOADNOTE"
        android:text="@string/LOAD"
        android:textColor="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="330dp"
        android:layout_height="544dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/WRITE_HERE"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/saved"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>