<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".SignUp_Page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="87dp"
        android:layout_marginTop="148dp"
        android:text="@string/signup_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/middlename_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/middlename_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/middlename_input"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="260dp"
        android:autofillHints=""
        android:hint="@string/Favorite_song"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signup_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:background="#FFFFFF"
        android:text="@string/SignUp_Enter"
        android:textColor="#009688"
        app:layout_constraintEnd_toEndOf="@+id/middlename_input"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/middlename_input"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/ChnageP_button"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="348dp"
        android:autofillHints=""
        android:hint="@string/change_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/middlename_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/middlename_input"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>